<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.8">
  <GVL Name="GVL_IO" Id="{5374206a-ed57-4d6d-b83e-559def242afe}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// Digital IO to Byte
	aDigitalInputIO AT %I* 	: ARRAY[1..9]OF BYTE; //KL1408 9EA
	aDigitalOutputIO AT %Q* : ARRAY[1..4]OF BYTE; //KL2408 4EA

	// Analog Input to INT
	aAnalogInputIO AT %I* 	: ARRAY[1..40]OF INT;
	aAnalogOutputIO AT %Q* 	: ARRAY[1..28]OF INT;
	aAnalogInputIO2 AT %I*	: ARRAY[1..2]OF UINT;
	//Solenoid Valve
	aOutputSolValve AT %Q* 	: ARRAY[1..2]OF DWORD; //Solenoid Valve 
	// Variable(struct) Connecting PC to PLC 
	stDeviceIO				: ST_Device;

	aMaxValue	: ARRAY[1..50]OF REAL; //Device Max Value from UI
	
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>